--- a/config/database.yml
+++ b/config/database.yml
@@ -3,23 +3,47 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+#development:
+#  adapter: sqlite3
+#  database: db/development.sqlite3
+#  pool: 5
+#  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+#test:
+#  adapter: sqlite3
+#  database: db/test.sqlite3
+#  pool: 5
+#  timeout: 5000
+
+#production:
+#  adapter: sqlite3
+#  database: db/production.sqlite3
+#  pool: 5
+#  timeout: 5000
+
+development:
+  adapter: postgresql
+  database: rails_first_app_dev
+  host: lan-server.sylvana.home
+  username: rails_first_app
+  password: Prometheus01
+  encoding: utf8
+
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  database: rails_first_app_test
+  host: lan-server.sylvana.home
+  username: rails_first_app
+  password: Prometheus01
+  encoding: utf8
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adpater: postgresql
+  database: rails_first_app
+  host: lan-server.sylvana.home
+  username: rails_first_app
+  password: Prometheus01
+  encoding: utf8
